# yukey

./: .gitignore  .prettierrc  LICENSE  README.md  analyse.html  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.github/workflows/: publish.yml
md/: dev.md  installation.md  refs.md
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: input_listener.rs  keyboard_listener.rs  lib.rs  main.rs
src/components/: ErrorBoundary.tsx  index.tsx
src/components/icons/: CloseIcon.tsx  ControlIcon.tsx  KeyCommand.tsx  KeyOption.tsx  MaximizeIcon.tsx  MetaModifierIcon.tsx  MinimizeIcon.tsx  MouseLeftIcon.tsx  MouseMiddleIcon.tsx  MouseRightIcon.tsx  OptionModifierIcon.tsx  PaletteIcon.tsx  PinIcon.tsx  SettingIcons.tsx  ShiftIcon.tsx  index.tsx
src/components/settings/: SettingItem.tsx  SettingPanel.tsx
src/components/theme/: ThemeItem.tsx  ThemePanel.tsx  ThemePicker.tsx
src/components/ui/: Key.tsx  Modal.tsx  ModifierKeys.tsx  MouseButtonIndicator.tsx  TitleBar.tsx  Tooltip.tsx
src/shared/constants/: index.ts  keys.ts  themes.ts
src/shared/types/: index.ts
src/store/: index.ts
src/style/: font.css  index.css  theme.css
src/styles/: themes.css
src/utils/: index.ts
