[package]
name = "yukey"
version = "0.1.1"
description = "YuKey"
authors = ["hudy9x", "yuran1811"]
edition = "2021"

[lib]
name = "yukey_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rdev = "0.5.3"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
